tests/snapshots/run_wpt_conformance__onnx_reduceSum_float32_4D_tensor_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum.https.any.js",
    "reduceSum float32 4D tensor options.keepDimensions=true",
    "onnx",
    "PASS",
)
