tests/snapshots/run_wpt_conformance__onnx_reduceSum_int32_2D_tensor_with_options_axes_and_options_keepDimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_sum.https.any.js",
    "reduceSum int32 2D tensor with options.axes and options.keepDimensions",
    "onnx",
    "PASS",
)
